Added a script installer for WHMCS 4.4.2. This is a commerical product, so you will need to purchase a licence for it before using the installer though.
Comments are now shown and can be edited on the DNS Records page.
Added support for spam and virus filtering offloading to the Cloudmin Services page.
Records can now be manually edited by the master admin on the DNS Records page, in BIND record format.
Added a checkbox to the Custom Fields page to control if each field appears on the List Virtual Servers page.
Unix UIDs and GIDs for domain owners and mailboxes are now tracked when deleted to prevent re-use.
The HTTP and HTTPS ports for a virtual server can now be changed using the --port and --ssh-port flags to the modify-web API command.
As part of the post-install wizard process, the primary DNS server hostname is now prompted for and validated. This ensures that DNS zones created by Virtualmin have usable NS records.
Reverse (PTR) records can now be created on the DNS Records page.
---- Changes since 3.85 ----
Updated the Moodle script installer to version 2.0.3, Zikula to 1.2.7, phpMyAdmin to 3.4.1, PHPList to 2.10.14, WordPress to 3.1.3, Drupal to 7.2 and 6.22, DokuWiki to 2011-05-25, CMS Made Simple to 1.9.4.2, Movable Type to 5.1, WHMCS to 4.5.1, phpMyFAQ to 2.6.16, and SugarCRM to 6.2.0RC3.
Added a field for pasting in the text of a domain's CA certificate.
The default DNS TTL for one or more domains can now be changed via the --ttl flag to the modify-dns API command.
---- Changes since 3.86 ----
Updated the Roundcube script installer to version 0.5.3, PHPprojekt to 6.0.6, phpMyAdmin to 3.4.2, phpMyFAQ to 2.6.17, Movable Type to 5.11, and SugarCRM to 6.2.0.