@@ -1296,3 +1296,4 @@ Added a field for pasting in the text of a domain's CA certificate.
 The default DNS TTL for one or more domains can now be changed via the --ttl flag to the modify-dns API command.
 ---- Changes since 3.86 ----
 Updated the Roundcube script installer to version 0.5.3, PHPprojekt to 6.0.6, phpMyAdmin to 3.4.2, phpMyFAQ to 2.6.17, Movable Type to 5.11, and SugarCRM to 6.2.0.
+Added the new API command set-global-feature to turn features and plugins on and off from the command line.
